# LibbinderUwU

./: Cargo.toml
binder-test/: Cargo.toml
binder-test/src/: common.rs  main.rs
binder-test/src/app/: mod.rs
binder-test/src/client/: mod.rs
binder-test/src/impls/: app.rs  calculator.rs  mod.rs  service_manager.rs
binder-test/src/interface/: mod.rs
binder-test/src/process_sync/: shared_completion.rs  shared_condvar.rs
binder-test/src/proxy/: mod.rs  service_manager.rs
binder-test/src/server/: mod.rs
binder-test/src/service_manager/: mod.rs
bytemuck-utils/: Cargo.toml
bytemuck-utils/src/: lib.rs
libbinder/: Cargo.toml
libbinder-raw/: Cargo.toml
libbinder-raw/src/: commands.rs  lib.rs  object.rs  object_ref.rs  transaction.rs  write_read.rs
libbinder-raw/src/object/: mod.rs  reference.rs
libbinder-raw/src/transaction/: kernel_managed.rs  not_kernel_managed.rs
libbinder-runtime/: Cargo.toml
libbinder-runtime/src/: binder_object.rs  boxed_object.rs  context.rs  execution_context.rs  lib.rs  object.rs  packet.rs  proxy.rs  reference.rs  remote_object.rs  util.rs  worker.rs
libbinder-runtime/src/packet/: builder.rs  mod.rs  reader.rs  writer.rs
libbinder-runtime/src/util/: mmap.rs  pool.rs
libbinder/src/: command_buffer.rs  common.rs  lib.rs  main.rs  packet.rs  return_buffer.rs
libbinder/src/client/: mod.rs
libbinder/src/formats/: dead_simple.rs  mod.rs
libbinder/src/packet/: builder.rs  mod.rs  reader.rs  writer.rs
libbinder/src/process_sync/: mod.rs  shared_mutex.rs
libbinder/src/server/: mod.rs
