[package]
name = "libbinder-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
closure = "0.3.0"
enumflags2 = "0.7.12"
libbinder = { version = "0.1.0", path = "../libbinder" }
libbinder-raw = { version = "0.1.0", path = "../libbinder-raw" }
nix = { version = "0.30.1", features = ["fs", "poll"] }
page_size = "0.6.0"
sync-ptr = "0.2.1"
