[package]
name = "libbinder"
version = "0.1.0"
edition = "2024"

[dependencies]
enumflags2 = "0.7.12"
libbinder-raw = { version = "0.1.0", path = "../libbinder-raw" }
nix = { version = "0.30.1", features = ["process"] }
process-sync = { git = "https://github.com/FoxieFlakey/process-sync-rs.git", rev = "a96bcfd6db554e47020252b07d4478c9968f333d" }
yoke = { version = "0.8.1", features = ["derive"] }
